package com.moriaty.uml.composite;

/**
 * <p>
 * Head
 * </p>
 *
 * @author Moriaty
 * @since 2021/7/24 23:37
 */
public class Head {
}
