package com.moriaty.uml.composite;

/**
 * <p>
 * IdCard
 * </p>
 *
 * @author Moriaty
 * @since 2021/7/24 23:38
 */
public class IdCard {
}
