package com.moriaty.uml.composite;

/**
 * <p>
 * Monitor
 * </p>
 *
 * @author Moriaty
 * @since 2021/7/24 23:29
 */
public class Monitor {
}
