package com.moriaty.uml.composite;
/**
 * <p>
 * Mouse
 * </p>
 *
 * @author Moriaty
 * @since 2021/7/24 23:29
 */
public class Mouse {
}
